# mujoco-lightworld

./: .gitignore  CHANGELOG.md  Experiment_Guide_WorldModelPPO.md  PAPER_DRAFT.md  PROJECT_ANALYSIS.md  README.md  config.yaml  pyproject.toml  requirements.txt  train.py
docs/: README.md
docs/architecture/: DataFlow.md  Overview.md
docs/basics/: MuJoCo_Setup.md  PPO_WorldModel_Concepts.md  RL_Basics.md
docs/changelog/: CHANGELOG.md
docs/code/: Modules.md  TrainingLoop.md
docs/config/: Parameters.md
docs/contributing/: Contributing.md
docs/experiments/: E1_PPO_vs_WM.md  E2_ZDim_Ablation.md  E3_Alpha_Ablation.md  E4_Latent_Visualization.md
docs/faq/: FAQ.md
docs/novel/: README.md
docs/novel/chapter1/: 1.1_start_open_train_py.md  1.2_environment_gym_mujoco.md
docs/performance/: Tips.md
docs/pitfalls/: CommonIssues.md
docs/runbook/: BestPractices.md  EndToEnd.md  Monitoring_and_Visualization.md  Plotting.md  UV_Workflow.md
paper_assets/: generate_diagrams.py  generate_gait_strip.py  record_video.py
rl/: __init__.py  buffer.py  policy.py  ppo.py
src/mujoco_lightworld/: train.py
src/mujoco_lightworld/common/: visualizer.py
src/mujoco_lightworld/rl/: ppo.py
submission/: Cover_Letter.txt  Manuscript.tex  Submission_Guide.md  Suggested_Reviewers.txt
tests/: test_wm.py  verify_viz.py
wm/: __init__.py  dynamics.py  encoder.py  loss.py
